Downgrade Tailwind config to v3

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
-@import "tailwindcss";
-@config "../../tailwind.config.js";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* 
   We import the variables here so Tailwind can access them.
